[package]
name = "worldgen-site"
version = "0.1.0"
authors = ["Samuel Sleight <samuel.sleight@gmail.com>"]

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket"}
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket"}
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket"}
serde_json = "1.0.26"
png = "0.12.0"